--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Project2_GameApp</string>
+    <string name="login_fragment">Login</string>
+    <string name="register_fragment">Create a New Account</string>
+    <string name="name_placeholder_text">Name</string>
+    <string name="email_placeholder_text">Email</string>
+    <string name="password_placeholder_text">Password</string>
+    <string name="login_button_text">Login</string>
+    <string name="registration_button_text">Register a new account</string>
+    <string name="register_button_text">Register</string>
+    <string name="cancel_button_text">Cancel</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
