--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,19 @@
     <string name="app_name">Project2_GameApp</string>
     <string name="login_fragment">Login</string>
     <string name="register_fragment">Create a New Account</string>
-    <string name="name_placeholder_text">Name</string>
+    <string name="first_name_placeholder_text">First Name</string>
+    <string name="last_name_text">Last Name</string>
     <string name="email_placeholder_text">Email</string>
     <string name="password_placeholder_text">Password</string>
     <string name="login_button_text">Login</string>
     <string name="registration_button_text">Register a new account</string>
     <string name="register_button_text">Register</string>
     <string name="cancel_button_text">Cancel</string>
+    <string name="join_txt">Join</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+    <string name="new_chatroom">New Chatroom</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
