--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="leave_txt">Leave</string>
     <string name="write_msg_txt">Write your message</string>
     <string name="one_like_txt">1 Like | </string>
-    <string name="start_game_txt">Start New Uno Game</string>
+    <string name="start_game_txt">Start New Game</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
