--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,5 @@
     <string name="one_like_txt">1 Like | </string>
     <string name="request_game_txt">Request Game</string>
     <string name="create_game_txt">Create Game</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="loading_placeholder_text">Loading...</string>
 </resources>
